--- a/.github/workflows/uptime-url-monitor.yml
+++ b/.github/workflows/uptime-url-monitor.yml
@@ -2,30 +2,22 @@ name: Website Uptime Monitor
 
 on:
   schedule:
-    - cron: '*/5 * * * *'  # Runs every 5 minutes
-  workflow_dispatch:  # Optional manual trigger
+    - cron: "* * * * *"  # Runs every minute
+  workflow_dispatch: null
 
 jobs:
   monitor:
     runs-on: ubuntu-latest
-
     steps:
       - name: Check uptime of the URL
-        id: uptime_check
         uses: srt32/uptime@v0.2
+        id: uptime_check
         with:
-          url-to-hit: 'https://www.google.com'  # URL to check uptime
-          expected-statuses: '200'  # The expected HTTP status code (200 means OK)
-
-      - name: Get HTTP Status Code
-        id: get_status_code
-        run: |
-          # Parse the output of the uptime action to extract the status code
-          # The action provides a JSON object, and we can access the status code from there.
-          echo "::set-output name=status_code::$(cat $GITHUB_WORKSPACE/uptime.json | jq .status)"
-        
+          url-to-hit: https://www.google.com
+          expected-statuses: "200"
+      
       - name: Send Email Report
-        if: always()  # This ensures the email is sent even if the uptime check fails
+        if: always()
         run: |
           # Install necessary packages for sending email
           sudo apt-get install -y msmtp jq
@@ -35,10 +27,10 @@ jobs:
           GMAIL_PASSWORD=${{ secrets.GMAIL_PASSWORD }}
           TO_EMAIL="ktharun4456@gmail.com"  # Replace with your recipient's email address
           SUBJECT="Website Uptime Report"
-          
+
           # Get the status code from the previous step
-          STATUS_CODE=${{ steps.get_status_code.outputs.status_code }}
-          
+          STATUS_CODE=${{ steps.uptime_check.outputs.status_code }}
+
           # If the status code matches, the website is up, else it's down
           if [ "$STATUS_CODE" == "200" ]; then
             BODY="The website https://www.google.com is UP. Status code: 200."
@@ -58,7 +50,7 @@ jobs:
           echo "tls_starttls on" >> ~/.msmtprc
           echo "logfile ~/.msmtp.log" >> ~/.msmtprc
 
-          # Set file permissions to restrict access to the .msmtprc file
+          # Ensure that the .msmtprc file has correct permissions
           chmod 600 ~/.msmtprc  # Make the file readable and writable only by the user
 
           # Send the email
