--- a/.github/workflows/uptime-url-monitor.yml
+++ b/.github/workflows/uptime-url-monitor.yml
@@ -47,9 +47,9 @@ jobs:
 
           # Determine the message body based on the website status
           if [ "$STATUS_CODE" == "200" ]; then
-            BODY="The website https://www.google.com is UP. Status code: 200."
+            BODY="The website $URL. Status code: 200."
           else
-            BODY="The website https://www.google.com is DOWN. Status code: $STATUS_CODE."
+            BODY="The website $URL is DOWN. Status code: $STATUS_CODE."
           fi
 
           # Configure msmtp to send the email via Gmail SMTP
