--- a/.github/workflows/uptime-url-monitor.yml
+++ b/.github/workflows/uptime-url-monitor.yml
@@ -46,10 +46,8 @@ jobs:
 
 
           # Determine the message body based on the website status
-          if [ "$STATUS_CODE" == "200" ]; then
-            BODY="The website $URL is UP. Status code: 200."
-          else
-            BODY="The website $URL is DOWN. Status code: $STATUS_CODE."
+          if [ "$STATUS_CODE" != "200" ]; then
+          BODY="The website $URL is DOWN. Status code: $STATUS_CODE."
           fi
 
           # Configure msmtp to send the email via Gmail SMTP
